--- a/app/src/main/res/layout/fragment_edit_parking_details.xml
+++ b/app/src/main/res/layout/fragment_edit_parking_details.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AddParkingFragment">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".EditParkingDetailsFragment">
+
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -177,7 +178,7 @@
                     android:id="@+id/etStreet"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
+                    android:layout_marginTop="10dp"
                     android:background="@color/white"
                     android:hint="Enter Building code..."
                     android:textSize="20dp"
@@ -210,22 +211,14 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/etLocality" />
 
-                <Button
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Fetch Location"
-                    android:layout_gravity="center"
-                    android:textColor="@color/app_color"
-                    android:backgroundTint="@color/white"
-                    android:id="@+id/btnFetchLocation"/>
             </LinearLayout>
         </androidx.cardview.widget.CardView>
 
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Add Parking"
-            android:id="@+id/btnAddParking"
+            android:text="Update Parking"
+            android:id="@+id/btnUpdateParking"
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginBottom="20dp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -234,5 +227,6 @@
             app:layout_constraintTop_toBottomOf="@+id/geoLocationCard"
             app:layout_constraintVertical_bias="0.938" />
     </androidx.constraintlayout.widget.ConstraintLayout>
+
 
 </FrameLayout>
