--- a/app/src/main/res/layout/parking_list_cell_layout.xml
+++ b/app/src/main/res/layout/parking_list_cell_layout.xml
@@ -1,38 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingTop="10dp"
-    android:paddingBottom="10dp">
+>
 <androidx.cardview.widget.CardView
     android:layout_width="match_parent"
-    android:layout_height="120dp"
+    android:layout_height="140dp"
+    android:layout_margin="10dp"
     android:background="@color/white">
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="20dp">
+        android:padding="20dp"
+        >
+
         <TextView
             android:id="@+id/tvBuildingCode"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
             android:layout_weight="1"
+            android:text="aefdsg"
             android:textSize="20dp"
-            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageButton
+            android:id="@+id/btnDeleteParking"
+            android:src="@drawable/ic_delete"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:text="delete"
+            android:background="@color/transparent"
             app:layout_constraintEnd_toEndOf="parent"
-            />
+            app:layout_constraintLeft_toRightOf="@+id/tvBuildingCode"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <TextView
             android:id="@+id/tvAddress"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginTop="18dp"
             android:layout_weight="1"
-            app:layout_constraintTop_toBottomOf="@+id/tvBuildingCode"
+            android:text="adfsg"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tvBuildingCode" />
+
+        <ImageButton
+            android:id="@+id/btnUpdateParking"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:src="@drawable/ic_edit"
+            android:text="delete"
+            android:background="@color/transparent"
             app:layout_constraintEnd_toEndOf="parent"
-            />
+            app:layout_constraintLeft_toRightOf="@+id/tvAddress"
+            app:layout_constraintTop_toBottomOf="@+id/btnDeleteParking" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.cardview.widget.CardView>
